[package]
name = "medias"
edition = "2021"
version = "0.1.0"

[dependencies]
log = "0.4.22"
thiserror = "1"

[dependencies.env_logger]
version = "0.11.5"
features = ["humantime", "auto-color"]
default-features = false

[dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
lto = true
codegen-units = 1
strip = true